fix alignment on header

--- a/git/fundfest.github.io/calendar/css/custom_1.css
+++ b/git/fundfest.github.io/calendar/css/custom_1.css
@@ -30,7 +30,7 @@ body {
 }
 
 .custom-header {
-	padding: 20px 20px 10px 30px;
+	padding: 30px 20px 10px 30px;
 	height: 50px;
 	position: relative;
 }
@@ -42,6 +42,7 @@ body {
 	text-transform: uppercase;
 	letter-spacing: 4px;
 	text-shadow: 1px 1px 0 rgba(0,0,0,0.1);
+
 }
 
 .custom-header h2 {
